# Uranium

./: .gitignore  CMakeLists.txt  README.md  build.sh  debug.sh  release.sh
common/: base.h
engine/: CMakeLists.txt  build_number.c  build_number.h  build_number.h.in  defines.h  dynlib.c  dynlib.h  engine.c  engine.h  engine_camera.c  engine_camera.h  engine_ground.c  engine_ground.h  engine_variables.h  glad.c  msg.c  msg.h  text_renderer.c  text_renderer.h  textrenderer.c  textrenderer.h  umap.c  umap.h  variables.h
engine/audio/: audio.c  audio.h
engine/gameui/: pause.c  pause.h
engine/stb/: stb_easy_font.h
game/: CMakeLists.txt  collision.c  collision.h  defines.h  func_ground.c  func_ground.h  game.c  game.h  game_cube.c  game_cube.h  player.c  player.h
game/examples/: cube.c  cube.h  func_cube.c  func_cube.h  func_pyramid.c  func_pyramid.h  pyramid.c
game/model/: cube.c
gameui/: CMakeLists.txt
include/glad/: glad.h
inputsystem/: CMakeLists.txt  inputsystem.c  inputsystem.h
launcher/: CMakeLists.txt  dynlib.c  launcher.c  launcher.h
lib/: SDL3.lib
materialsystem/: CMakeLists.txt
md3system/: CMakeLists.txt  model.c  model.h
src/: CMakeLists.txt  main.c
src/common/: base.h
src/engine/: CMakeLists.txt  build_number.h  buildnumber.h  commands.c  commands.h  console.c  console.h  debugpanel.c  debugpanel.h  defines.h  engine.c  engine.h  fps.c  fps.h  gameui_engine.c  msg.c  umap.c  umap.h  variables.h
src/game/: CMakeLists.txt  collision.c  collision.h  commands.c  game.c  game.h  gameui_game.c  gameui_game.h  player.c  player.h  umap_game.c  umap_game.h
src/game/entities/: brush.c  pushable.c
src/inputsystem/: inputsystem.h
src/launcher/: launcher.c
src/materialsystem/: materialsystem.c
src/video/: CMakeLists.txt  video.c  video.h
